# car-genie-project

./: .gitignore  Car_Genie_Proyecto_Final.docx  README.md  README_MODELING.md  app.py  pyproject.toml  requirements.txt
api/: index.py
data/modeling_data/: car_catalogue.csv  car_retail_prices.csv  mexico_cars_complete.csv
data/scrapped_data/: autos_mexico_mercadolibre.csv  car_listings_mexico_marketcheck.csv
results/: feature_importance.csv  model_metrics.csv  model_predictions.csv
src/extraction/: data_collection.py  mercadolibre_cars_scraper.py  supercarros_scraper.py
src/modeling_components/: car_depreciation_estimator.py  car_price_model.py  car_price_model_script.py  car_recommender.py  example_recommendation.py  generate_retail_prices.py
src/notebooks/: car_price_intelligence.ipynb  car_price_model.ipynb
templates/: index.html
utils/: __init__.py  data_cleaning.py  modeling.py
