[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-genie"
version = "0.1.0"
description = "AI-powered car valuation and recommendation platform for the Mexican market"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "anthropic>=0.90",
    "pandas>=1.5",
    "numpy>=1.21",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "lightgbm>=3.3",
    "joblib>=1.2",
    "requests>=2.28",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "notebook>=6.5",
    "ipykernel>=6.19",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "plotly>=5.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "src*"]

[tool.setuptools.package-dir]
"" = "."
